@@ -39,90 +39,102 @@
 	<profiles>
 		<profile>
 			<id>coverage</id>
-			<properties>
-	            <emma.session.out.file>${project.build.directory}/emma/${project.artifactId}.es</emma.session.out.file>
-	            <emma.instrument.bundles>org.aniszczyk.minerva.core</emma.instrument.bundles>
-	         </properties>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.eclipse.tycho</groupId>
-						<artifactId>tycho-surefire-plugin</artifactId>
-						<version>${tycho-version}</version>
-						<configuration>
-							<excludes>
-								<!-- test mojo matches TestProject be default and treats it as PojoTest -->
-								<exclude>**/Test*.class</exclude>
-							</excludes>
-							<useUIHarness>false</useUIHarness>
-                            <argLine>-Xmx512M -XX:MaxPermSize=256M</argLine>
-                            <systemProperties combine.children="append">
-                                <emma.session.out.file>${emma.session.out.file}</emma.session.out.file>
-                                <eclemma.instrument.bundles>${emma.instrument.bundles}</eclemma.instrument.bundles>
-                            </systemProperties>
-                            <frameworkExtensions>
-                                <frameworkExtension>
-                                    <groupId>org.eclemma.runtime.equinox</groupId>
-                                    <artifactId>org.eclemma.runtime.equinox</artifactId>
-                                    <version>1.1.0-SNAPSHOT</version>
-                                </frameworkExtension>
-                            </frameworkExtensions>
-						</configuration>
-						<dependencies>
-							<dependency>
-                                <groupId>org.eclemma.runtime.equinox</groupId>
-                                <artifactId>org.eclemma.runtime.equinox</artifactId>
-                                 <version>1.1.0-SNAPSHOT</version>
-							</dependency>
-						</dependencies>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-antrun-plugin</artifactId>
-						<dependencies>
-							<dependency>
-								<groupId>emma</groupId>
-								<artifactId>emma_ant</artifactId>
-								<version>2.0.5312</version>
-							</dependency>
-							<dependency>
-								<groupId>emma</groupId>
-								<artifactId>emma</artifactId>
-								<version>2.0.5312</version>
-							</dependency>
-						</dependencies>
-						<executions>
-							<execution>
-								<id>emma-report</id>
-								<phase>verify</phase>
-								<goals>
-									<goal>run</goal>
-								</goals>
-								<configuration>
-									<tasks>
-										<taskdef resource="emma_ant.properties" />
-										<echo>Process emma report...</echo>
-										<emma enabled="true">
-											<report>
-												<infileset dir="${project.build.directory}/emma"
-													includes="*.es" />
-												<txt outfile="${project.build.directory}/emma/coverage.txt" />
-												<xml outfile="${project.build.directory}/emma/coverage.xml" />
-												<!-- Could also generate an HTML report, if you want... -->
-											</report>
-										</emma>
-										<loadfile property="emma.txt"
-											srcFile="${project.build.directory}/emma/coverage.txt"
-											failonerror="false" />
-										<echo>${emma.txt}</echo>
-									</tasks>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
+         <build>
+            <plugins>
+               <plugin>
+                  <groupId>org.jacoco</groupId>
+                  <artifactId>jacoco-maven-plugin</artifactId>
+                  <version>0.5.6.201201232323</version>
+                  <executions>
+                     <execution>
+                        <goals>
+                           <goal>prepare-agent</goal>
+                        </goals>
+                     </execution>
+                  </executions>
+               </plugin>
+               <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-antrun-plugin</artifactId>
+                  <version>1.7</version>
+                  <dependencies>
+                     <dependency>
+                        <groupId>org.jacoco</groupId>
+                        <artifactId>org.jacoco.ant</artifactId>
+                        <version>0.5.6.201201232323</version>
+                     </dependency>
+                     <dependency>
+                        <groupId>ant-contrib</groupId>
+                        <artifactId>ant-contrib</artifactId>
+                        <version>20020829</version>
+                     </dependency>
+                  </dependencies>
+                  <executions>
+                     <execution>
+                        <id>jacoco-report</id>
+                        <phase>install</phase>
+                        <goals>
+                           <goal>run</goal>
+                        </goals>
+                        <configuration>
+                           <target>
+                              <property name="source-location" location="../"/>
+                              <taskdef name="jacoco-report"
+                                 classname="org.jacoco.ant.ReportTask"
+                                 classpathref="maven.plugin.classpath" />
+                              <taskdef classpathref="maven.runtime.classpath"
+                                 resource="net/sf/antcontrib/antcontrib.properties" />
+                              <available
+                                 file="${project.basedir}/target/jacoco.exec"
+                                 property="jacoco.exec.file.exists" />
+                              <echo message="${project.basedir}/target/jacoco.exec" />
+                              <if>
+                                 <equals arg1="${jacoco.exec.file.exists}"
+                                    arg2="true" />
+                                 <then>
+                                    <echo message="Executing jacoco report" />
+                                    <echo message="${source-location}"/>
+                                    <trycatch>
+                                       <try>
+                                          <jacoco-report>
+                                             <executiondata>
+                                                <file
+                                                   file="${project.basedir}/target/jacoco.exec" />
+                                             </executiondata>
 
+                                             <structure name="Minerva">
+                                                <classfiles>
+                                                   <fileset
+                                                      dir="${source-location}/org.aniszczyk.minerva.core/target/classes" />
+                                                </classfiles>
+                                                <sourcefiles
+                                                   encoding="UTF-8">
+                                                   <fileset
+                                                      dir="${source-location}/org.aniszczyk.minerva.core/src/" />
+                                                </sourcefiles>
+                                             </structure>
+
+                                             <html
+                                                destdir="${project.basedir}/target/jacoco/report" />
+                                             <xml destfile="${project.basedir}/target/jacoco/report/jacoco.xml"/>
+                                          </jacoco-report>
+                                       </try>
+                                       <catch>
+                                          <echo>skipping</echo>
+                                       </catch>
+                                    </trycatch>
+                                 </then>
+                                 <else>
+                                    <echo message="No jacoco.exec file found." />
+                                 </else>
+                              </if>
+                           </target>
+                        </configuration>
+                     </execution>
+                  </executions>
+               </plugin>
+            </plugins>
+         </build>
 		</profile>
 	</profiles>
 </project>
